FIX: JaCoCo starts working for unit tests